--- a/TESTAPP/TESTAPP.csproj
+++ b/TESTAPP/TESTAPP.csproj
@@ -9,4 +9,19 @@
 	<ItemGroup>
 		<PackageReference Include="GregsStack.InputSimulatorStandard" Version="1.3.5" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Properties\Settings.Designer.cs">
+	    <DesignTimeSharedInput>True</DesignTimeSharedInput>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Settings.settings</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Properties\Settings.settings">
+	    <Generator>SettingsSingleFileGenerator</Generator>
+	    <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+	  </None>
+	</ItemGroup>
 </Project>
